discussion/kv_engine/177109/177109_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52675: Add PagingVisitor benchmark

Add a benchmark for the PagingVisitor which measures how long
it takes to "visit" a vBucket. This measures how long it takes to
page out the required amount of items (memory) from the vBucket.
The benchmarks also logs the number of evicted items.

$ time ./ep_engine_benchmarks --benchmark_filter=PagingVisitor
2022-07-06T08:12:16+01:00
Running ./ep_engine_benchmarks
Run on (10 X 2400 MHz CPU s)
CPU Caches:
  L1 Data 64 KiB (x10)
  L1 Instruction 128 KiB (x10)
  L2 Unified 4096 KiB (x5)
Load Average: 1.03, 3.65, 8.50
----------------------------------------------------------------------------------------------------------------------
Benchmark                                                            Time             CPU   Iterations UserCounters...
----------------------------------------------------------------------------------------------------------------------
PagingVisitorBench/SingleVBucket/10/iterations:1/threads:1     9756249 ns      9753000 ns            1 Evicted=14.857k
PagingVisitorBench/SingleVBucket/64/iterations:1/threads:1    71077416 ns     71075000 ns            1 Evicted=105.437k
PagingVisitorBench/SingleVBucket/128/iterations:1/threads:1  159769792 ns    159764000 ns            1 Evicted=213.104k

real	2m6.656s
user	1m25.810s
sys	0m26.195s

Change-Id: I7c6d43f04c3af9765f5c044a24e21cb7fb46c52d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-07-06 10:40:49.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-06 13:12:50.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18748/ : FAILURE

clang-tidy found the following problems:

<pre>
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/aligned_buffer.h:91:28: error: invalid application of "sizeof" to an incomplete type "cb::Semaphore" [clang-diagnostic-error]
    : std::aligned_storage<sizeof(_Tp), __alignof__(_Tp)>
                           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_base.h:538:35: note: in instantiation of template class "__gnu_cxx::__aligned_buffer<cb::Semaphore>" requested here
        __gnu_cxx::__aligned_buffer<_Tp> _M_storage;
                                         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_base.h:599:13: note: in instantiation of member class "std::_Sp_counted_ptr_inplace<cb::Semaphore, std::allocator<cb::Semaphore>, __gnu_cxx::_S_atomic>::_Impl" requested here
      _Impl _M_impl;
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_base.h:679:13: note: in instantiation of template class "std::_Sp_counted_ptr_inplace<cb::Semaphore, std::allocator<cb::Semaphore>, __gnu_cxx::_S_atomic>" requested here
          typename _Sp_cp_type::__allocator_type __a2(__a._M_a);
                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_base.h:1371:14: note: in instantiation of function template specialization "std::__shared_count<__gnu_cxx::_S_atomic>::__shared_count<cb::Semaphore, std::allocator<cb::Semaphore>>" requested here
        : _M_ptr(), _M_refcount(_M_ptr, __tag, std::forward<_Args>(__args)...)
                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:408:4: note: in instantiation of function template specialization "std::__shared_ptr<cb::Semaphore, __gnu_cxx::_S_atomic>::__shared_ptr<std::allocator<cb::Semaphore>>" requested here
        : __shared_ptr<_Tp>(__tag, std::forward<_Args>(__args)...)
          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:859:14: note: in instantiation of function template specialization "std::shared_ptr<cb::Semaphore>::shared_ptr<std::allocator<cb::Semaphore>>" requested here
      return shared_ptr<_Tp>(_Sp_alloc_shared_tag<_Alloc>{__a},
             ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:875:19: note: in instantiation of function template specialization "std::allocate_shared<cb::Semaphore, std::allocator<cb::Semaphore>>" requested here
      return std::allocate_shared<_Tp>(std::allocator<_Tp_nc>(),
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:78:27: note: in instantiation of function template specialization "std::make_shared<cb::Semaphore>" requested here
    auto semaphore = std::make_shared<cb::Semaphore>();
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager.h:28:7: note: forward declaration of "cb::Semaphore"
class Semaphore;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/aligned_buffer.h:94:23: error: invalid application of "sizeof" to an incomplete type "cb::Semaphore" [clang-diagnostic-error]
        std::aligned_storage<sizeof(_Tp), __alignof__(_Tp)>::type _M_storage;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager.h:28:7: note: forward declaration of "cb::Semaphore"
class Semaphore;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18748/ )

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/aligned_buffer.h:91:28:
error: invalid application of "sizeof" to an incomplete type "cb::Semaphore" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21670/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferYes
[2022-07-06T11:58:47.376Z] unknown file: Failure
[2022-07-06T11:58:47.376Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response" thrown in the test body.
[2022-07-06T11:58:47.376Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferYes, where GetParam() = (Mcbp, XattrNo, 4-byte object <01-00 00-00>, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (2027 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21670/ )

Timeout of a CTest test [2022-07-06T12:03:37.268Z]   7/423 Test #253: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21670/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17905/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47553/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39938/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8429/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20643/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20995/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19879/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8528/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29033/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
